// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Mark /> renders 1`] = `
<mark
  className="fc2wgsh"
>
  Word
</mark>
`;

exports[`<Mark /> renders selected 1`] = `
<mark
  className="f4bousf"
>
  Word
</mark>
`;
